Experimenting with CSS and Java

--- a/index.html
+++ b/index.html
@@ -1,13 +1,17 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>mooky.dev</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>m00ky.dev</title>
+        <link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
     <body>
-        <h1>photo</h1>
-        <h1>openemr</h1>
-        <h1>cv</h1>
-        <h1>links</h1>
+        <h1 class="hover-heading" href="https://photo.mooky.dev">photo</h1>
+        <h1 class="hover-heading" href="https://openemr.mooky.dev">openemr</h1>
+        <h1 class="hover-heading">cv</h1>
+        <h1 class="hover-heading">links</h1>
+        <script src="index.js"></script>
     </body>
 </html>
