Altered links and unordered list

--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
     </head>
 
     <body>
-        <h1 class="hover-heading" href="https://photo.mooky.dev">photo</h1>
-        <h1 class="hover-heading" href="https://openemr.mooky.dev">openemr</h1>
-        <h1 class="hover-heading">cv</h1>
-        <h1 class="hover-heading">links</h1>
+        <ul class="list">
+            <li><a class="hover-heading" href="https://github.com/jackgedge">git</li>
+            <li><a class="hover-heading" href="https://photo.mooky.dev">photo</li>
+            <li><a class="hover-heading" href="https://openemr.mooky.dev">openemr</li>  
+            <li><a class="hover-heading" href="https://www.linkedin.com/in/jack-galbraith-edge-b0492b70/">cv</li>
+        </ul>
         <script src="index.js"></script>
     </body>
 </html>
