--- a/index.html
+++ b/index.html
@@ -3,14 +3,15 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>m00ky.dev</title>
+        <title>mooky.dev</title>
         <link rel="stylesheet" type="text/css" href="index.css">
     </head>
 
     <body>
+        <h1>mooky.dev</h1>
         <ul class="list">
             <li><a class="hover-heading" href="https://github.com/jackgedge">git</li>
-            <li><a class="hover-heading" href="https://photo.mooky.dev">photo</li>
+            <li><a class="hover-heading" href="https://img.ckge.io">photo</li>
             <li><a class="hover-heading" href="https://openemr.mooky.dev">openemr</li>  
             <li><a class="hover-heading" href="https://www.linkedin.com/in/jack-galbraith-edge-b0492b70/">cv</li>
         </ul>
