--- a/index.html
+++ b/index.html
@@ -5,16 +5,26 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>mooky.dev</title>
         <link rel="stylesheet" type="text/css" href="index.css">
+        <script src="index.js"></script>
     </head>
 
     <body>
-        <h1>mooky.dev</h1>
-        <ul class="list">
-            <li><a class="hover-heading" href="https://github.com/jackgedge">git</li>
-            <li><a class="hover-heading" href="https://img.ckge.io">photo</li>
-            <li><a class="hover-heading" href="https://openemr.mooky.dev">openemr</li>  
-            <li><a class="hover-heading" href="https://www.linkedin.com/in/jack-galbraith-edge-b0492b70/">cv</li>
-        </ul>
-        <script src="index.js"></script>
+        <header>
+            <h2>ckge.io</h2>
+        </header>
+        <main>
+
+            
+            <ul class="list">
+                <li><a class="hover-heading" href="https://github.com/jackgedge">git</li>
+                <li><a class="hover-heading" href="https://img.ckge.io">img</li>
+                <li><a class="hover-heading" href="https://openemr.mooky.dev">emr</li>  
+                <li><a class="hover-heading" href="https://www.linkedin.com/in/jack-galbraith-edge-b0492b70/">cv</li>
+            </ul>
+        </main>
+
+        <footer>
+
+        </footer>
     </body>
 </html>
