Updated title and style

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>mooky.dev</title>
+        <title>jack</title>
         <link rel="stylesheet" type="text/css" href="index.css">
-        <script src="index.js"></script>
+        
     </head>
 
     <body>
         <header>
-            <h2>ckge.io</h2>
+            <h2>jack</h2>
         </header>
         <main>
 
@@ -20,6 +20,7 @@
                 <li><a class="hover-heading" href="https://img.ckge.io">img</li>
                 <li><a class="hover-heading" href="https://openemr.mooky.dev">emr</li>  
                 <li><a class="hover-heading" href="https://www.linkedin.com/in/jack-galbraith-edge-b0492b70/">cv</li>
+                <script src="index.js"></script>
             </ul>
         </main>
 
